--- a/style.css
+++ b/style.css
@@ -1,4 +1,51 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/* comment */
 body {
     background: rgb(22, 21, 21);
-    color: rgb(202, 193, 193)
+    color: rgb(202, 193, 193);
+}
+
+a {
+    color: rgb(126, 124, 124);
+    text-decoration: none;
+}
+
+h1 {
+    color: #aaabb4;
+    font-size: 40px;
+    text-align: center;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
+}
+
+.first-p {
+    color: brown;
+    border: 2px solid gray;
+    padding: 10px;
+    width: 400px;
+    margin: 10px auto;
+}
+
+img {
+    width: 300px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px rgb(121, 119, 119);
+    display: block;
+    margin: 10px auto;
+}
+
+iframe {
+    border-radius: 10px;
+}
+
+.container {
+    width: 700px;
+    margin: 0 auto;
 }
