--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ p {
 }
 
 .first-p {
-    color: brown;
+    color: rgb(59, 38, 38);
     border: 2px solid gray;
     padding: 10px;
     width: 400px;
